--- a/css/style.css
+++ b/css/style.css
@@ -1,106 +1,172 @@
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 ::selection {
-    background-color: rgba(212, 77, 233, 0.7);
-    color: white;
+  background-color: rgba(212, 77, 233, 0.7);
+  color: white;
 }
 body {
-    font-size: 1.8rem;
-    background-color: rgba(255, 238, 255, 0.7);
-    font-weight: normal;
+  font-size: 1.8rem;
+  background-color: rgba(255, 238, 255, 0.7);
+  font-weight: normal;
 }
-h1, h2, h3, h4, h5, h6 {
-    font-weight: normal;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: normal;
 }
 img {
-    max-width: 100%;
-    height: auto;
+  max-width: 100%;
+  height: auto;
 }
 select {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 .container {
-    max-width: 130rem;
+  max-width: 130rem;
 }
 .flex {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
 }
 .header {
-    padding: 1.2rem 0;
+  padding: 1.2rem 0;
 }
 .logo {
-    font-weight: bold;
-    font-size: 2.5rem;
+  font-weight: bold;
+  font-size: 2.5rem;
 }
 .nav {
-    background-color: white;
-    display: flex;
-    flex-wrap: wrap;
-    column-gap: 2rem;
-    padding: 0.8rem 2rem;
-    margin-bottom: 2rem;
+  background-color: white;
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 2rem;
+  padding: 0.8rem 2rem;
+  margin-bottom: 2rem;
 }
 .title {
-    font-size: 3rem;
+  font-size: 3rem;
 }
 .grid {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 3rem;
-    margin-bottom: 5rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 3rem;
+  margin-bottom: 5rem;
 }
 .grid__box {
-    padding: 2rem;
-    border-radius: 10px;
-    background-color: white;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  padding: 2rem;
+  border-radius: 10px;
+  background-color: white;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
 .article {
-    display: block;
-    cursor: pointer;
+  display: block;
+  cursor: pointer;
 }
 .article__icon {
-    font-size: 30px;
-    margin-bottom: 1rem;
+  font-size: 30px;
+  margin-bottom: 1rem;
 }
 .article__title {
-    font-size: 2.4rem;
+  font-size: 2.4rem;
 }
 .footer {
-    background-color: white;
-    padding: 4rem 0;
+  background-color: white;
+  padding: 4rem 0;
 }
 .footer .flex {
-    align-items: flex-start;
-    justify-content: flex-start;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
 .footer__article {
-    width: 100%;
+  width: 100%;
 }
 .footer__social {
-    margin-right: 1rem;
-    font-size: 2rem;
+  margin-right: 1rem;
+  font-size: 2rem;
 }
 .flexfooter {
-    column-gap: 2rem;
+  column-gap: 2rem;
+}
+.footer__title {
+  font-size: 2.4rem;
+}
+.footer__logo {
+  display: inline-block;
+  margin-bottom: 1.2rem;
+}
+.help {
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  opacity: 0.4;
+}
+.help:hover,
+.help:focus,
+.help:active,
+.help:focus-within {
+  opacity: 1;
+}
+.help__icon {
+  font-size: 55px;
+  margin-bottom: 1rem;
+}
+.help__button {
+  padding: 0 1rem;
+  margin-bottom: 0;
+  height: 2.5rem;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+}
+.nowrap {
+  overflow-x: auto;
+  flex-wrap: nowrap;
+}
+.nowrap > * {
+  flex-shrink: 0;
+}
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
 
 @media screen and (min-width: 850px) {
-    .grid {
-        grid-template-columns: 1fr 1fr;
-    }
-    .footer__article {
-        width: 31%;
-    }
+  .grid {
+    grid-template-columns: 1fr 1fr;
+  }
+  .footer__article {
+    width: 31%;
+  }
 }
 @media screen and (min-width: 1200px) {
-    .grid {
-        grid-template-columns: 1fr 1fr 1fr;
-    }
+  .grid {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
